--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html xmlns:th = "http://www.thymeleaf.org">
-    <!-- footer html 변경하면 됩니다-->
-    <div id="footer" th:fragment="footer">
-        <p>
-            copyright (c)2023. 장서윤. All right reserved
-        </p>
-    </div>
-    <!-- footer html 변경하면 됩니다-->
+<html xmlns:th="http://www.thymeleaf.org">
+<!-- footer html 변경하면 됩니다-->
+<div id="footer" th:fragment="footer">
+    <!-- Start Footer Area -->
+    <footer class="footer">
+        <!-- Start Footer Bottom -->
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="inner">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="content">
+                                <ul class="footer-bottom-links">
+                                    <li><a href="javascript:void(0)">김예진</a></li>
+                                    <li><a href="javascript:void(0)">김정현</a></li>
+                                    <li><a href="javascript:void(0)">서태건</a></li>
+                                    <li><a href="javascript:void(0)">장서윤</a></li>
+                                    <li><a href="javascript:void(0)">전수진</a></li>
+                                    <li><a href="javascript:void(0)">최아영</a></li>
+                                    <li><a href="javascript:void(0)">한건주</a></li>
+                                </ul>
+                                <p class="copyright-text">Designed and Developed by <a
+                                        href="https://gitlab.com/i5e2/like-awesome-vegetable"
+                                        rel="nofollow" target="_blank">멋쟁이 채소처럼</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Footer Middle -->
+    </footer>
+    <!--/ End Footer Area -->
+
+    <!-- ========================= scroll-top ========================= -->
+    <a href="#" class="scroll-top btn-hover">
+        <i class="lni lni-chevron-up"></i>
+    </a>
+</div>
+<!-- footer html 변경하면 됩니다-->
 </html>
