--- a/src/main/resources/templates/market/auction-result-detail.html
+++ b/src/main/resources/templates/market/auction-result-detail.html
@@ -2,162 +2,171 @@
 <html class="no-js" lang="zxx">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title>경매 완료</title>
-  <meta name="description" content="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
-  <!-- Place favicon.ico in the root directory -->
+    <meta charset="utf-8"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+    <title>경매 완료</title>
+    <meta name="description" content=""/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/awesome/images/favicon.svg}"/>
+    <!-- Place favicon.ico in the root directory -->
 
-  <!-- Web Font -->
-  <link
-          href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-          rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <!-- Web Font -->
+    <link
+            th:href="@{https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap}"
+            rel="stylesheet">
+    <link th:href="@{https://fonts.googleapis.com/css2?family=Lato&display=swap}" rel="stylesheet">
 
-  <!-- ========================= CSS here ========================= -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
-  <link rel="stylesheet" href="assets/css/animate.css" />
-  <link rel="stylesheet" href="assets/css/tiny-slider.css" />
-  <link rel="stylesheet" href="assets/css/glightbox.min.css" />
-  <link rel="stylesheet" href="assets/css/main.css" />
+    <!-- ========================= CSS here ========================= -->
+    <link th:href="@{/awesome/css/bootstrap.min.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/LineIcons.2.0.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/animate.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/tiny-slider.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/glightbox.min.css}" rel="stylesheet" type="text/css">
+    Ï
+    <link th:href="@{/awesome/css/main-custom.css}" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
 
+<!--start header-->
+<div th:replace="fragments/header :: header"/>
+<!--end header-->
+
 <!-- Start Breadcrumbs -->
 <div class="breadcrumbs">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-lg-6 col-md-6 col-12">
-        <div class="breadcrumbs-content">
-          <h1 class="page-title">경매 완료</h1>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6 col-md-6 col-12">
+                <div class="breadcrumbs-content">
+                    <h1 class="page-title">경매 완료</h1>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 <!-- End Breadcrumbs -->
 
 <!-- Start Contact Area -->
 <section id="contact-us" class="contact-us section">
-  <div class="container">
-    <div class="contact-head wow fadeInUp" data-wow-delay=".4s">
-      <div class="row">
-        <div class="col-lg-5 col-12">
-          <div class="form-main">
-            <div class="form-title">
-              <h2>경매 정보</h2>
-            </div>
+    <div class="container">
+        <div class="contact-head wow fadeInUp" data-wow-delay=".4s">
             <div class="row">
-              <div class="col-lg-6 col-12">
-                <div class="single-info">
-                  <h3>게시글 번호</h3>
-                  <p class="auction-result">1</p>
+                <div class="col-lg-5 col-12">
+                    <div class="form-main">
+                        <div class="form-title">
+                            <h2>경매 정보</h2>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6 col-12">
+                                <div class="single-info">
+                                    <h3>게시글 번호</h3>
+                                    <p class="auction-result">1</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-12">
+                                <div class="single-info">
+                                    <h3>농가명</h3>
+                                    <p class="auction-result">00</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-12">
+                                <div class="single-info">
+                                    <h3>품목</h3>
+                                    <p class="auction-result">00</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-12">
+                                <div class="single-info">
+                                    <h3>수량</h3>
+                                    <p class="auction-result">00</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-12">
+                                <div class="single-info">
+                                    <h3>최저 가격</h3>
+                                    <p class="auction-result">00</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-12">
+                                <div class="single-info">
+                                    <h3>최고 가격</h3>
+                                    <p class="auction-result">00</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-12">
+                                <div class="single-info">
+                                    <h3>경매 마감일</h3>
+                                    <p class="auction-result">00</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-12">
+                                <div class="single-info">
+                                    <h3>배송 여부</h3>
+                                    <p class="auction-result">00</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-6 col-12">
-                <div class="single-info">
-                  <h3>농가명</h3>
-                  <p class="auction-result">00</p>
-                </div>
-              </div>
-              <div class="col-lg-6 col-12">
-                <div class="single-info">
-                  <h3>품목</h3>
-                  <p class="auction-result">00</p>
-                </div>
-              </div>
-              <div class="col-lg-6 col-12">
-                <div class="single-info">
-                  <h3>수량</h3>
-                  <p class="auction-result">00</p>
-                </div>
-              </div>
-              <div class="col-lg-6 col-12">
-                <div class="single-info">
-                  <h3>최저 가격</h3>
-                  <p class="auction-result">00</p>
-                </div>
-              </div>
-              <div class="col-lg-6 col-12">
-                <div class="single-info">
-                  <h3>최고 가격</h3>
-                  <p class="auction-result">00</p>
-                </div>
-              </div>
-              <div class="col-lg-6 col-12">
-                <div class="single-info">
-                  <h3>경매 마감일</h3>
-                  <p class="auction-result">00</p>
-                </div>
-              </div>
-              <div class="col-lg-6 col-12">
-                <div class="single-info">
-                  <h3>배송 여부</h3>
-                  <p class="auction-result">00</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
 
-        <div class="col-lg-7 col-12">
-          <div class="form-main">
-            <div class="form-title">
-              <h2>낙찰 정보</h2>
+                <div class="col-lg-7 col-12">
+                    <div class="form-main">
+                        <div class="form-title">
+                            <h2>낙찰 정보</h2>
+                        </div>
+                        <form class="form" method="post">
+                            <div class="row">
+                                <div class="col-lg-6 col-12">
+                                    <div class="single-info">
+                                        <h3>입찰 번호</h3>
+                                        <p class="auction-result">1</p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12">
+                                    <div class="single-info">
+                                        <h3>기업명</h3>
+                                        <p class="auction-result">00</p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12">
+                                    <div class="single-info">
+                                        <h3>입찰가</h3>
+                                        <p class="auction-result">00</p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12">
+                                    <div class="single-info">
+                                        <h3>입찰 시간</h3>
+                                        <p class="auction-result">00</p>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-group button">
+                                        <button type="submit" class="btn ">계약하기</button>
+                                        <p>*24시간 이내 계약 완료하셔야 합니다.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <form class="form" method="post">
-              <div class="row">
-                <div class="col-lg-6 col-12">
-                  <div class="single-info">
-                    <h3>입찰 번호</h3>
-                    <p class="auction-result">1</p>
-                  </div>
-                </div>
-                <div class="col-lg-6 col-12">
-                  <div class="single-info">
-                    <h3>기업명</h3>
-                    <p class="auction-result">00</p>
-                  </div>
-                </div>
-                <div class="col-lg-6 col-12">
-                  <div class="single-info">
-                    <h3>입찰가</h3>
-                    <p class="auction-result">00</p>
-                  </div>
-                </div>
-                <div class="col-lg-6 col-12">
-                  <div class="single-info">
-                    <h3>입찰 시간</h3>
-                    <p class="auction-result">00</p>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-group button">
-                    <button type="submit" class="btn ">계약하기</button>
-                    <p>*24시간 이내 계약 완료하셔야 합니다.</p>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </section>
 <!--/ End Contact Area -->
 
+<!--start footer-->
+<div th:replace="fragments/footer :: footer"/>
+<!--end footer-->
+
 <!-- ========================= JS here ========================= -->
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/wow.min.js"></script>
-<script src="assets/js/tiny-slider.js"></script>
-<script src="assets/js/glightbox.min.js"></script>
-<script src="assets/js/main.js"></script>
+<script type="text/javascript" th:src="@{/awesome/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/awesome/js/wow.min.js}"></script>
+<script type="text/javascript" th:src="@{/awesome/js/tiny-slider.js}"></script>
+<script type="text/javascript" th:src="@{/awesome/js/glightbox.min.js}"></script>
+<script type="text/javascript" th:src="@{/awesome/js/main.js}"></script>
 </body>
 
 </html>
