--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="zxx">
+<html xmlns:th = "http://www.thymeleaf.org" class="no-js" lang="ko">
 
 <head>
   <meta charset="utf-8" />
@@ -7,45 +7,25 @@
   <title>Error 404 - ClassiGrids Classified Ads and Listing Website Template.</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
+  <link rel="shortcut icon" type="image/x-icon" th:href="@{assets/images/favicon.svg}" />
   <!-- Place favicon.ico in the root directory -->
 
   <!-- Web Font -->
   <link
-  href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-  rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+          th:href="@{https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap}"
+          rel="stylesheet">
+  <link th:href="@{https://fonts.googleapis.com/css2?family=Lato&display=swap}" rel="stylesheet">
 
   <!-- ========================= CSS here ========================= -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
-  <link rel="stylesheet" href="assets/css/animate.css" />
-  <link rel="stylesheet" href="assets/css/tiny-slider.css" />
-  <link rel="stylesheet" href="assets/css/glightbox.min.css" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-
+  <link th:href ="@{/awesome/css/bootstrap.min.css}" rel="stylesheet" type="text/css">
+  <link th:href ="@{/awesome/css/LineIcons.2.0.css}" rel="stylesheet" type="text/css">
+  <link th:href ="@{/awesome/css/animate.css}" rel="stylesheet" type="text/css">
+  <link th:href ="@{/awesome/css/tiny-slider.css}" rel="stylesheet" type="text/css">
+  <link th:href ="@{/awesome/css/glightbox.min.css}" rel="stylesheet" type="text/css">
+  <link th:href ="@{/awesome/css/main.css}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <!--[if lte IE 9]>
-      <p class="browserupgrade">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="https://browsehappy.com/">upgrade your browser</a> to improve
-        your experience and security.
-      </p>
-    <![endif]-->
-
-  <!-- Preloader -->
-  <div class="preloader">
-    <div class="preloader-inner">
-        <div class="preloader-icon">
-            <span></span>
-            <span></span>
-        </div>
-    </div>
-</div>
-<!-- /End Preloader -->
-
   <!-- Start Error Area -->
   <div class="error-area">
     <div class="d-table">
@@ -68,10 +48,10 @@
   <!-- End Error Area -->
 
   <!-- ========================= JS here ========================= -->
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/wow.min.js"></script>
-  <script src="assets/js/tiny-slider.js"></script>
-  <script src="assets/js/glightbox.min.js"></script>
+  <script th:src="@{/awesome/js/bootstrap.min.js}"></script>
+  <script th:src="@{/awesome/js/wow.min.js}"></script>
+  <script th:src="@{/awesome/js/tiny-slider.js}"></script>
+  <script th:src="@{/awesome/js/glightbox.min.js}"></script>
   <script>
    window.onload = function () {
         window.setTimeout(fadeout, 500);
