refactor: 기업 모집 글쓰기 view 변경
- Company
    - company-gather-writeform
- ckeditor.js 파일 추가 / js 경로 지정

#33

--- a/src/main/resources/templates/company/company-gather-writeform.html
+++ b/src/main/resources/templates/company/company-gather-writeform.html
@@ -63,16 +63,16 @@
                         <div class="dashboard-menu">
                             <ul>
                                 <li><a class="active" href="dashboard.html"><i class="lni lni-dashboard"></i>
-                                        I5E2</a></li>
+                                    I5E2</a></li>
                                 <li><a href="profile-settings.html"><i class="lni lni-pencil-alt"></i>회원정보수정</a></li>
                                 <li><a href="favourite-items.html"><i class="lni lni-heart"></i>모집 내역</a></li>
                                 <li><a href="favourite-items.html"><i class="lni lni-heart"></i>응찰 내역</a></li>
                                 <li><a href="my-items.html"><i class="lni lni-bolt-alt"></i>포인트</a></li>
                                 <li><a href="favourite-items.html"><i class="lni lni-heart"></i>관심 목록</a></li>
                                 <li><a href="favourite-items.html"><i class="lni lni-heart"></i>알림</a></li>
-                            <div class="button">
-                                <a class="btn" href="javascript:void(0)">정회원 신청</a>
-                            </div>
+                                <div class="button">
+                                    <a class="btn" href="javascript:void(0)">정회원 신청</a>
+                                </div>
                         </div>
                     </div>
                     <!-- Start Dashboard Sidebar -->
@@ -88,31 +88,17 @@
                                     <nav>
                                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
                                             <button class="nav-link active" id="nav-item-info-tab" data-bs-toggle="tab"
-                                                data-bs-target="#nav-item-info" type="button" role="tab"
-                                                aria-controls="nav-item-info" aria-selected="true">
-                                                <span class="serial">01</span>
-                                                기본정보
-                                                <span class="sub-title">기본 정보</span>
-                                            </button>
-                                            <button class="nav-link" id="nav-item-details-tab" data-bs-toggle="tab"
-                                                data-bs-target="#nav-item-details" type="button" role="tab"
-                                                aria-controls="nav-item-details" aria-selected="false">
-                                                <span class="serial">02</span>
-                                                상세모집설정
-                                                <span class="sub-title">품종/가격/상세</span>
-                                            </button>
-                                            <button class="nav-link" id="nav-user-info-tab" data-bs-toggle="tab"
-                                                data-bs-target="#nav-user-info" type="button" role="tab"
-                                                aria-controls="nav-user-info" aria-selected="false">
-                                                <span class="serial">03</span>
-                                                운임방법
-                                                <span class="sub-title">운임/배송 정보</span>
+                                                    data-bs-target="#nav-item-info" type="button" role="tab"
+                                                    aria-controls="nav-item-info" aria-selected="true">
+                                                <span class="serial">필수</span>
+                                                모집 게시글
+                                                <span class="sub-title">기본/상세설정/운임정보</span>
                                             </button>
                                         </div>
                                     </nav>
                                     <div class="tab-content" id="nav-tabContent">
                                         <div class="tab-pane fade show active" id="nav-item-info" role="tabpanel"
-                                            aria-labelledby="nav-item-info-tab">
+                                             aria-labelledby="nav-item-info-tab">
                                             <!-- Start Post Ad Step One Content -->
                                             <div class="step-one-content">
                                                 <form class="default-form-style" method="post" action="#">
@@ -121,19 +107,19 @@
                                                             <div class="form-group">
                                                                 <label>제목*</label>
                                                                 <input name="title" type="text"
-                                                                    placeholder="경매를 잘 드러낼 수 있는 제목으로 입력해주세요">
+                                                                       placeholder="경매를 잘 드러낼 수 있는 제목으로 입력해주세요">
                                                             </div>
                                                         </div>
                                                         <div class="col-12">
                                                             <div class="form-group">
                                                                 <label>모집 시작일*</label>
                                                                 <input name="title" type="datetime-local"
-                                                                    placeholder="시작일을 설정해주세요">
+                                                                       placeholder="시작일을 설정해주세요">
                                                             </div>
                                                             <div class="form-group">
                                                                 <label>모집 마감일*</label>
                                                                 <input name="title" type="datetime-local"
-                                                                    placeholder="마감일을 설정해주세요">
+                                                                       placeholder="마감일을 설정해주세요">
                                                             </div>
                                                         </div>
                                                         <div class="col-12">
@@ -158,38 +144,24 @@
                                                             <div class="form-group">
                                                                 <label>모집 품종*</label>
                                                                 <input name="title" type="text"
-                                                                    placeholder="모집할 품종을 정확하게 기재해주세요">
+                                                                       placeholder="모집할 품종을 정확하게 기재해주세요">
                                                             </div>
                                                         </div>
-                                                        <div class="col-12">
-                                                            <div class="form-group button mb-0">
-                                                                <button type="submit" class="btn ">다음으로 넘어가기</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                            <!-- Start Post Ad Step One Content -->
-                                        </div>
-                                        <div class="tab-pane fade" id="nav-item-details" role="tabpanel"
-                                            aria-labelledby="nav-item-details-tab">
-                                            <!-- Start Post Ad Step Two Content -->
-                                            <div class="step-two-content">
-                                                <form class="default-form-style" method="post" action="#">
-                                                    <div class="row">
-                                                        
+                                                        <hr>
+
+                                                        <!-- Start Post Ad Step Two Content -->
                                                         <div class="col-12">
                                                             <div class="form-group">
                                                                 <label>모집 물량 (톤(t)단위)*</label>
                                                                 <input name="vege-category" type="text"
-                                                                    placeholder="모집 물량을 입력해주세요">
+                                                                       placeholder="모집 물량을 입력해주세요">
                                                             </div>
                                                         </div>
                                                         <div class="col-12">
                                                             <div class="form-group">
                                                                 <label>가격 설정*</label>
                                                                 <input name="price" type="number"
-                                                                    placeholder="모집 가격을 입력해주세요">
+                                                                       placeholder="모집 가격을 입력해주세요">
                                                             </div>
                                                         </div>
 
@@ -198,32 +170,17 @@
                                                             <textarea id="content" placeholder="이미지를 포함한 상품 상세 내용을 작성해주세요"></textarea>
                                                         </div>
                                                         <!-- end editor -->
+
                                                         <div class="col-12">
                                                             <div class="form-group">
                                                                 <label class="tag-label">태그* <span>Comma(,)로 구분해 주세요</span></label>
                                                                 <input name="tag" type="text"
-                                                                    placeholder="태그를 작성해주세요">
+                                                                       placeholder="태그를 작성해주세요">
                                                             </div>
                                                         </div>
-                                                        <div class="col-12">
-                                                            <div class="form-group button mb-0">
-                                                                <button type="submit"
-                                                                    class="btn alt-btn">이전으로</button>
-                                                                <button type="submit" class="btn ">다음으로 넘어가기</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                            <!-- Start Post Ad Step Two Content -->
-                                        </div>
-                                        <div class="tab-pane fade" id="nav-user-info" role="tabpanel"
-                                            aria-labelledby="nav-user-info-tab">
-                                            <!-- Start Post Ad Step Three Content -->
-                                            <div class="step-three-content">
-                                                <form class="default-form-style" method="post" action="#">
-                                                    <div class="row">
+                                                        <hr>
 
+                                                        <!-- Start Post Ad Step Three Content -->
                                                         <div class="col-12">
                                                             <div class="form-group">
                                                                 <label>운임방법*</label>
@@ -244,14 +201,14 @@
                                                             <div class="form-group">
                                                                 <label>수령인*</label>
                                                                 <input name="name" type="text"
-                                                                    placeholder="수령인 성함을 작성해주세요">
+                                                                       placeholder="수령인 성함을 작성해주세요">
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-6 col-12">
                                                             <div class="form-group">
                                                                 <label>수령인 연락처*</label>
                                                                 <input name="number" type="text"
-                                                                    placeholder="수령인 연락처를 작성해주세요">
+                                                                       placeholder="수령인 연락처를 작성해주세요">
                                                             </div>
                                                         </div>
 
@@ -259,27 +216,20 @@
                                                             <div class="form-group">
                                                                 <label>배송 받을 주소*</label>
                                                                 <input name="address" type="text"
-                                                                    placeholder="배송 받을 주소를 입력해주세요">
+                                                                       placeholder="배송 받을 주소를 입력해주세요">
                                                             </div>
                                                         </div>
+
                                                         <div class="col-12">
-                                                            <div class="form-check">
-                                                                <input class="form-check-input" type="checkbox" value=""
-                                                                    id="flexCheckDefault">
-                                                                <label class="form-check-label" for="flexCheckDefault">
-                                                                    I agree to all Terms of Use & Posting Rules
-                                                                </label>
-                                                            </div>
                                                             <div class="form-group button mb-0">
-                                                                <button type="submit"
-                                                                    class="btn alt-btn">이전으로</button>
                                                                 <button type="submit" class="btn ">작성 완료</button>
                                                             </div>
                                                         </div>
+
                                                     </div>
                                                 </form>
                                             </div>
-                                            <!-- Start Post Ad Step Three Content -->
+                                            <!-- Start Post Ad Step One Content -->
                                         </div>
                                     </div>
                                 </div>
@@ -309,7 +259,7 @@
     <script th:src="@{/awesome/js/tiny-slider.js}"></script>
     <script th:src="@{/awesome/js/glightbox.min.js}"></script>
     <script th:src="@{/awesome/js/main.js}"></script>
-    <script th:src="@{assets/js/ckeditor.js}"></script>
+    <script th:src="@{/awesome/js/ckeditor.js}"></script>
 </body>
 
 </html>
